--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -61,3 +61,35 @@ endif ()
 # )
 
 ################# END simulation_history ####################
+
+################# BEGIN trends ####################
+
+add_executable(trends trends.cc)
+target_link_libraries(trends PRIVATE equilibrium gflags::gflags prettyprint OpenMP::OpenMP_CXX)
+
+# Cross-platform compiler lints
+if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang"
+        OR ${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
+    target_compile_options(trends PRIVATE
+            -Wall
+            -Wextra
+            -Wswitch
+            -Wconversion
+            -Wparentheses
+            -Wfloat-equal
+            -Wzero-as-null-pointer-constant
+            -Wpedantic
+            -pedantic
+            -pedantic-errors)
+elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
+    target_compile_options(trends PRIVATE
+            /W3)
+endif ()
+
+# add_custom_command(
+#         TARGET trends
+#         PRE_BUILD
+#         COMMAND ${CMAKE_COMMAND} -DSRC_DIR="${CMAKE_SOURCE_DIR}/data" -DDEST_DIR="${CMAKE_CURRENT_BINARY_DIR}/data" -P "${CMAKE_SOURCE_DIR}/cmake/configure_files.cmake"
+# )
+
+################# END trends ####################
